
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="#fff">

    <TextView
        android:id="@+id/user_guide_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_guide_title"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/user_guide_text"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_guide_title"/>

    <Button
        android:id="@+id/closeFragmentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_guide_button"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"                android:backgroundTint="@color/primary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>