<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/toolbar_title"
        android:background="@color/primary"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="16dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:columnCount="3"
            android:rowCount="4">

            <!-- Row 1 -->
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="3" />


            <!-- Row 2 -->
            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="6" />


            <!-- Row 3 -->
            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="9" />

            <!-- Row 4 -->
            <Button
                android:id="@+id/buttonC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="C" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="0" />

            <Button
                android:id="@+id/buttonDEL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="2dp"
                android:longClickable="true"
                android:onClick="onButtonClick"
                android:backgroundTint="@color/primary"
                android:text="DEL" />

        </GridLayout>

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:longClickable="false"
            android:text=""
            android:textAlignment="textEnd"
            android:backgroundTint="@color/primary"
            android:textSize="32sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="32dp"
            android:onClick="displayIsPrime"
            android:padding="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/prime" />

        <Button
            android:id="@+id/moduloButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="32dp"
            android:onClick="displayModulo"
            android:padding="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/modulo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginHorizontal="32dp"
            android:onClick="displayUserGuide"
            android:padding="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/user_guide_title" />
    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/user_guide_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>